--- a/client/src/Pages/Main.css
+++ b/client/src/Pages/Main.css
@@ -1,28 +1,18 @@
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-ul {
+.loggedin-menu {
+  width: 20%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   list-style: none;
 }
 
-.loggedin-menu {
-  border: 1px solid pink;
+.main-content {
+  height: 96%;
 }
 
 .search {
-  border: 1px solid black;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .articles {
-  border: 1px solid blue;
-  height: 200px;
+  font-size: 0.5rem;
+  /* height: 300px; */
 }
