--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,16 +6,13 @@
 
 body,
 html {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 #root {
   width: 100%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 a {
