--- a/client/src/Pages/MyPage/MyPageLayout.css
+++ b/client/src/Pages/MyPage/MyPageLayout.css
@@ -27,17 +27,16 @@
 }
 
 aside {
-  border: 1px solid black;
-  flex: 2;
+  border-right: 1px solid #e0e0e0;
+  flex: 1;
 }
 
 .content {
-  flex: 8;
+  flex: 12;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
   height: 100%;
-  padding: 2rem;
+  padding: 1rem;
 }
