--- a/client/src/Pages/MyPage/MyPageLayout.css
+++ b/client/src/Pages/MyPage/MyPageLayout.css
@@ -20,15 +20,16 @@
 }
 
 .tabmenu-content {
+
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100%;
 }
 
 aside {
   border-right: 1px solid #e0e0e0;
   flex: 1;
+  height: 100vh;
 }
 
 .content {
